html/appliance/2.1/index.asciidoc
---
tags: []
title: CS50_Appliance_2.1
---

*This HOWTO is for version 2.1 of the CS50 Appliance. If "taking"
http://cs50.tv/2010/fall/[Fall 2010] of CS50, you should use this
version of the appliance. If "taking" http://cs50.tv/2009/fall/[Fall
2009] of CS50, you should use link:CS50 Appliance 1.4[version 1.4]
instead.*

The CS50 Appliance is a
http://en.wikipedia.org/wiki/Virtual_machine[virtual machine] (VM) that
lets you "take" CS50, even if you're not a student at Harvard.

It's based on
http://en.wikipedia.org/wiki/Fedora_(operating_system)[Fedora], a
http://en.wikipedia.org/wiki/Linux[Linux]-based
http://en.wikipedia.org/wiki/Operating_system[operating system]. It's an
http://en.wikipedia.org/wiki/Computer_appliance[appliance] in the sense
that we've preconfigured this VM for a specific purpose: CS50!

In other words, if you don't have an account on `cloud.cs50.net`
(because you're not a student in CS50), you can still play along at
home. The CS50 Appliance will let you compile source code from
http://cs50.tv/2010/fall#l=lectures[lectures] and implement
http://cs50.tv/2010/fall#l=psets[problem sets] without having to figure
out how to configure
http://en.wikipedia.org/wiki/GNU_Compiler_Collection[GCC], etc.
yourself. Having the CS50 Appliance on your computer is like having your
own, local version of `cloud.cs50.net`! Put another way, the CS50
Appliance lets you run Linux inside of a window on your own computer,
even if you're already running (some other version of) Linux, Mac OS,
Solaris, or Windows!

Make sense? (If not, you may want to watch, at least, Week 0's and Week
1's http://cs50.tv/2010/fall/#l=lectures[lectures]. :-)

Incidentally, the Appliance is always work in progress, so please
forgive any bugs! We'll document link:#_known_issues[known issues] down
below. Do turn to the course's http://cs50.tv/2009/fall/#r=group[Google
Group] if you run into problems, and we'll do our best to improve the
experience.

[[]]
Cheatsheet
----------

See link:#_instructions[instructions] for much more detail.

[cols=",",]
|=======================================================================
|*Your Name* |John Harvard

|*Your Username* |jharvard

|*Your Password* |crimson

|*Superuser's Username* |root

|*Superuser's Password* |crimson

|*Appliance's IP* |192.168.56.50

|*Your Computer's IP* |192.168.56.1

|*Your MySQL Server (DB_SERVER)* |localhost

|*Your MySQL Username (DB_USER)* |jharvard

|*Your MySQL Password (DB_PASS)* |crimson

|*Superuser's MySQL Username* |root

|*Superuser's MySQL Password* |crimson

|*Your Homepage* +
once you follow http://cs50.tv/2010/fall/#l=psets[Problem Set 7]'s
instructions |http://192.168.56.50/~jharvard

|*phpMyAdmin* |http://192.168.56.50/phpmyadmin/

|*Usermin* |http://192.168.56.50:20000

|*Webmin* |http://192.168.56.50:10000

|*VirtualBox's Host Key* |left-Command on a Mac; right-Control on any
other OS
|=======================================================================

[[]]
Instructions
------------

[[]]
How to Install Appliance
~~~~~~~~~~~~~~~~~~~~~~~~

In order to install the appliance, you first need to install a program
called a http://en.wikipedia.org/wiki/Hypervisor[hypervisor] that will
let you run http://en.wikipedia.org/wiki/Virtual_machine[virtual
machines] on your own computer, whether you run Linux, Mac OS, Solaris,
or Windows. Unless you already own a hypervisor (e.g., Parallels, VMware
Fusion, or VMware Workstation), *CS50 recommends that you download and
install link:#_virtualbox[VirtualBox] because it's free and
cross-platform.*

[[]]
VirtualBox
^^^^^^^^^^

Here's how to install the appliance using VirtualBox.

1.  Download and install
http://en.wikipedia.org/wiki/VirtualBox[VirtualBox 4.1] from
http://www.virtualbox.org/wiki/Downloads. *If you already have an older
version of VirtualBox installed, download and install VirtualBox 4.1
before proceeding to the next step.*
2.  Download the latest appliance at
http://mirror.cs50.net/appliance/2.1/cs50-appliance-2.1-5-ovf.zip. Then
unzip it. *Do not double-click the files within.*
3.  Launch VirtualBox (as by clicking its icon wherever you installed
it).
4.  If using a PC, skip to step 5. If using a Mac, select
*Preferences...* under VirtualBox's *VirtualBox* menu; if running any
other OS, select *Preferences* under VirtualBox's *File* menu. Click
*Network* in the window that appears.
* If you see *vboxnet0* under *Host-only Networks*, simply click *OK*;
you don't need to change anything.
* If you do not see *vboxnet0* under *Host-only Networks*, click the
green plus (+) icon to the right of the white box below *Host-only
Networks*. You should then see *vboxnet0*. Click *OK*.
5.  Select *Import Appliance...* from VirtualBox's *File* menu. Click
*Choose*. Navigate your way to that unzipped *cs50-appliance-2.1-5-ovf*
folder, highlight the *cs50-appliance-2.1-5.ovf* file within, and click
*Open*. Then click *Next*. You should see a summary of the appliance's
settings. Click *Import*. You'll then be prompted to agree to the
appliance's http://creativecommons.org/licenses/by-nc-sa/3.0/[license].
If you click *Agree*, you'll see *CS50 Appliance 2.1* in VirtualBox's
left-hand menu after a few seconds or minutes. Click *CS50 Appliance
2.1* to highlight it, then click *Start*.

[[]]
VMware Fusion
^^^^^^^^^^^^^

Here's how to install the appliance using VMware Fusion. *However, CS50
recommends that you use link:#_virtualbox[VirtualBox] unless you already
own and prefer VMware Fusion.* These instructions assume that VMware
Fusion is already installed.

1.  Download the latest appliance at
http://mirror.cs50.net/appliance/2.1/cs50-appliance-2.1-5-vmx.zip. Then
unzip it. *Do not double-click the files within.*
2.  Launch VMware Fusion (as by double-clicking its icon, which is
likely in *Macintosh HD > Applications*). Select *Open...* from VMware
Fusion's *File* menu. Navigate your way to that unzipped
*cs50-appliance-2.1-5-vmx* folder, highlight the
*cs50-appliance-2.1-5.vmx* file within, and click *Open*. Within a few
seconds or minutes, you should see *CS50 Appliance 2.1* in VMware
Fusion's left-hand menu; it should start automatically.

[[]]
VMware Workstation
^^^^^^^^^^^^^^^^^^

Here's how to install the appliance using VMware Workstation. *However,
CS50 recommends that you use link:#_virtualbox[VirtualBox] unless you
already own and prefer VMware Workstation.* These instructions assume
that VMware Workstation is already installed.

1.  Download the latest appliance at
http://mirror.cs50.net/appliance/2.1/cs50-appliance-2.1-5-vmx.zip. Then
unzip it. *Do not double-click the files within.*
2.  Move the unzipped `cs50-appliance-2.1-5-vmx` folder into the folder
in which VMware Workstation stores your VMs (e.g.,
`C:\Users\username\Documents\Virtual Machines\`, where `username` is
your username on your PC.
3.  Launch VMware Workstation (as by clicking *Start > All Programs >
VMware > VMware Workstation*). Select *Open* from VMWare Workstation's
*File* menu. Navigate your way to the unzipped
`cs50-appliance-2.1-5-vmx` folder, select the `cs50-appliance-2.1-5.vmx`
file therein, and click *Open*. A tab labeled *CS50 Appliance 2.1*
should appear in the *VMware Workstation* window. To start the virtual
machine, click *Power on this virtual machine* in that tab.

[[]]
Parallels
^^^^^^^^^

Here's how to install the appliance using Parallels. *However, CS50
recommends that you use link:#_virtualbox[VirtualBox] unless you already
own and prefer Parallels.* These instructions assume that Parallels is
already installed.

_Coming Soon_

[[]]
KVM
^^^

Here's how to install the appliance using KVM. *However, CS50 recommends
that you use link:#_virtualbox[VirtualBox] unless you already own and
prefer Parallels.* These instructions assume that KVM is already
installed.

_Coming Soon_

[[]]
How to Update Appliance
~~~~~~~~~~~~~~~~~~~~~~~

The latest release of version 2.1 of the CS50 Appliance is *2.1-5*. To
check which version you have, link:#_how_to_open_a_terminal[open a
terminal] and execute:

`yum list installed cs50-appliance`

You should see output like the below, which indicates the release that
you have installed:

`cs50-appliance.i386                         2.1-5                          @cs50`

You can update the appliance to the latest release in either of two
ways:

* Select *Menu > Administration > Software Update*, then click *Install
Updates* if any updates are available.
* link:#_how_to_open_a_terminal[Open a terminal] and execute:
+
---------------------------------------
sudo yum clean all ; sudo yum -y update
---------------------------------------
+
Input *crimson* if prompted for a password.

Don't worry if you see

`  Updating   : cs50-appliance-2.1-5.i386`

on the screen for a minute or more; it takes a while to restart each of
the appliance's services.

[[]]
How to Use Appliance
~~~~~~~~~~~~~~~~~~~~

The first thing you should see when the appliance boots up is John
Harvard's desktop. (Oh, henceforth, you are
http://en.wikipedia.org/wiki/John_Harvard_(clergyman)[John Harvard].
Your initial password is *crimson*. And here's
http://en.wikipedia.org/wiki/File:BostonTrip-91.jpg[what you look
like].) Even though you might think of Linux as having only a
http://en.wikipedia.org/wiki/Command-line_interface[command-line
interface],
http://en.wikipedia.org/wiki/Graphical_user_interface[graphical user
interfaces] do exist. We've installed
http://en.wikipedia.org/wiki/Xfce[Xfce], one of the most popular, for
you. However, we installed as few programs as possible to keep the
appliance small. You're welcome to install additional programs via *Menu
> Administration > Add/Remove Applications*.

[[]]
How to Change Name
^^^^^^^^^^^^^^^^^^

As much as you might not like being called John, *do not try to change
John Harvard's name or username*. Life will be simpler as John.

With that said, if you'd _really_ like to be yourself (or someone else
altogether), you're welcome to create a new account.
link:#_how_to_open_a_terminal[Open a terminal] and execute

`sudo adduser --comment "Jane Harvard" --gid students --groups wheel --password crimson janeh` +
`echo -e "crimson\ncrimson" | sudo smbpasswd -a -s janeh`

where `Jane Harvard` is your desired name, `crimson` is your desired
password, and `janeh` is your desired username. Be sure not to overlook
the `\n` in the second command.

If you'd also like to start logging into the appliance automatically
under your new identity (instead of John Harvard's), execute

`sudo nano /etc/gdm/custom.conf`

and change `jharvard` to your own username. Then hit *ctrl-x*, then *y*,
then *Enter* to save and quit.

[[]]
How to Change Password
^^^^^^^^^^^^^^^^^^^^^^

You can change your password in any of these ways:

* Select *Menu > Preferences > Password* and follow the on-screen
prompts.
* Log into Usermin at http://192.168.56.50:20000/, select *Login >
Change Password* at top-left, and follow the on-screen instructions.
* link:#_how_to_open_a_terminal[Open a terminal] and execute: +
+
------
passwd
------

With that said, allow us to suggest that you not change John Harvard's
password if your own computer is already password-protected. (Life will
be simpler with *crimson*.) The appliance has been configured in such a
way that only someone with access to your computer (e.g., you) can
access the appliance. Even though the appliance can connect to the
Internet, the Internet cannot connect to the appliance.

[[]]
How to Change Language
^^^^^^^^^^^^^^^^^^^^^^

*This feature may require Internet access.*

If English is not your native language, you may want to change the
appliance's default language. Some things will remain in English, but
you might find yourself more at home nonetheless. Select *Menu >
Administration > Language*, inputting your password if prompted. Select
your preferred language from the list that appears, then click *OK*. If
prompted, click *Import key*. You may need to wait for a bit as the
language is installed. Then link:#_how_to_restart_appliance[restart the
appliance] and log back in.

[[]]
How to Change Keyboard Layout
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

If you have a non-U.S. (or non-standard) keyboard, you may want (or
need!) to change your keyboard's layout. Select *Menu > Administration >
Keyboard*. (To be clear, select *Administration*, not *Preferences*.)
Select your preferred keyboard, then click *OK*.

[[]]
How to Change Time Zone
^^^^^^^^^^^^^^^^^^^^^^^

If you don't live in Cambridge, Massachusetts, USA, you may want to
change the appliance's timezone. Select *Menu > Administration > Date &
Time*. Click the *Time Zone* tab, select the nearest city in your time
zone, then click *OK*, leaving *System clock uses UTC* checked.

[[]]
How to Open a Terminal
^^^^^^^^^^^^^^^^^^^^^^

You can open a terminal in any of these ways:

* Select *Menu > Internet > Terminal*. You'll find yourself in your home
directory (`~`).
* Click Terminal's icon (a black square) in the appliance's bottom-left
corner. You'll find yourself in your home directory (`~`).
* Right-click anywhere on your desktop and select *Open Terminal Here*.
You'll find yourself in `~/Desktop/`.

No matter the approach you take, you should then see a command-line
interface much like the one you've probably seen in
http://cs50.tv/2010/fall/#l=lectures[lectures]! It's at this prompt that
you'll be able to type commands like *cd*, `gcc`, `ls`, and `nano`.

If you don't have an account on `nice.fas.harvard.edu` or
`cloud.cs50.net` but a problem set tells you to "SSH to
`nice.fas.harvard.edu`" or "SSH to `cloud.cs50.net`", you can simply
open a terminal instead (or you can link:#_how_to_ssh_to_appliance[SSH to
the appliance]).

[[]]
How to SSH to Appliance
^^^^^^^^^^^^^^^^^^^^^^^

If you'd like to SSH to the appliance from your own computer (as with
Terminal on Mac OS or with PuTTY on Windows), you can SSH from your
computer to *192.168.56.50*, which is the appliance's static IP address.
(The appliance actually has a second IP address, obtained via DHCP, but
it uses that IP to access the Internet.)

If you'd instead like to SSH _from_ the appliance _to_ your computer
(assuming your computer is running an SSH server), you can SSH from the
appliance to *192.168.56.1*, which is the static IP address that
VirtualBox has secretly assigned to your computer.

*Note that, for security's sake, you can SSH to the appliance as
`jharvard` but not as `root`.*

[[]]
How to Release Keyboard and Mouse
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Once you click inside of the appliance, it "captures" your keyboard's
keystrokes and your mouse's movements. To release your keyboard and
mouse from the appliance's clutches, hit VirtualBox's "host key": on a
Mac, VirtualBox's host key is your keyboard's left-Command key; on any
other OS, VirtualBox's host key is your keyboard's right-Control key.
Once you hit that key, should be able to move your mouse anywhere on
your screen.

[[]]
How to Change Host Key
^^^^^^^^^^^^^^^^^^^^^^

VirtualBox's "host key" allows you to release your keyboard and mouse
from the appliance if they've been "captured," which happens when you
click somewhere inside of the appliance's window (unless you have
link:#_how_to_install_guest_additions[guest additions] installed).

On a Mac, VirtualBox's host key is your keyboard's left-Command key; to
change it, select *VirtualBox > Preferences... > Input*. On any other
OS, VirtualBox's host key is your keyboard's right-Control key; to
change it, select *File > Preferences > Input*. In either case, be sure
that VirtualBox's main window (where you can select the CS50 Appliance
from a list) is in the foreground, not the appliance's own window, else
the *Preferences...* and/or *File* menu might not appear.

[[]]
How to Install Guest Additions
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

*These instructions assume that you're using VirtualBox as your
hypervisor. For VMware Fusion and VMware Workstation, you'll instead
want to install "VMware Tools."*

"Guest Additions" are device drivers and system applications that come
with VirtualBox that can improve the performance and usability of the
CS50 Appliance. Those additions allow you to
link:#_how_to_change_resolution[change the appliance's resolution],
link:#_how_to_enter.2fexit_fullscreen_mode[enter/exit fullscreen mode],
link:#_how_to_enter/exit_seamless_mode[enter/exit seamless mode], and
link:#_how_to_transfer_files_between_appliance_and_your_computer[share
folders] between the appliance and your own computer. They may also
eliminate the need to "release" your keyboard and mouse via VirtualBox's
"host key."

To install them, select *Install Guest Additions...* from VirtualBox's
*Devices* menu while the appliance is running. (This menu is outside of
the appliance, not inside of it. You may need to
link:#_how_to_release_keyboard_and_mouse[release your keyboard and mouse]
first.) An icon of a CD may then appear on your desktop, but no need to
double-click it. Instead, link:#_how_to_open_a_terminal[open a terminal]
and execute the commands below. Input your password if prompted. (For
security, you will not see your password as you type it.)

`sudo mount /dev/sr0 /media/` +
`sudo /media/VBoxLinuxAdditions.run`

Once the software has been installed, execute the command below:

`sudo umount /media/`

Then select *CD/DVD Devices > Remove disk from virtual drive* from
VirtualBox's *Devices* menu. (This menu is outside of the appliance, not
inside of it. You may need to
link:#_how_to_release_keyboard_and_mouse[release your keyboard and mouse]
first.) Then link:#_how_to_restart_appliance[restart the appliance] and
log back in.

[[]]
How to Change Resolution
^^^^^^^^^^^^^^^^^^^^^^^^

By default, the appliance's resolution for John Harvard is 800x600 (so
that his desktop fits on most any computer's screen). To lower the
resolution to 640x480 or increase the resolution to 1024x768, select
*Menu > Preferences > Display*, select a new value to the right of
*Resolution*, then click *Close*.

To increase the appliance's resolution beyond 1024x768 and to enable
auto-resize (whereby dragging VirtualBox's bottom-left corner will alter
the appliance's resolution), you'll need to install
link:#_how_to_install_guest_additions[install guest additions], if you
haven't already.

[[]]
How to Change Volume
^^^^^^^^^^^^^^^^^^^^

By default, the appliance's audio is off, but you can enable it as
follows.

1.  Select *Menu > Sound & Video > Mixer*.
2.  Select *Playback: Internal Audio Analog Stereo (PulseAudio Mixer)*
next to *Sound card*.
3.  Click '''Select Controls...".
4.  Check *Master* then click *Close*.
5.  Click the speaker icon to unmute the appliance's audio, then drag
the sliders upward to increase the audio's volume.
6.  Click *Quit*.
7.  Visit http://webhamster.com/ in Firefox to test!

[[]]
How to Enter/Exit Fullscreen Mode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For fullscreen mode to work, you'll first need to
link:#_how_to_install_guest_additions[install guest additions] if you
haven't already.

Thereafter, you can enter fullscreen mode in either of these ways:

* Select *Switch to Fullscreen* from VirtualBox's *Machine* menu while
the appliance is running. (This menu is outside of the appliance, not
inside of it.)
* Hit VirtualBox's "host key" and F together. (On a Mac, VirtualBox's
host key is your keyboard's left-Command key; on any other OS,
VirtualBox's host key is your keyboard's right-Control key.)

You can exit fullscreen mode in either of these ways:

* Move your cursor to the middle of the bottom of your screen, at which
point a menu should appear. Click the second icon from the right (which
resembles two squares).
* Hit VirtualBox's "host key" and F together. (On a Mac, VirtualBox's
host key is your keyboard's left-Command key; on any other OS,
VirtualBox's host key is your keyboard's right-Control key.)

[[]]
How to Enter/Exit Seamless Mode
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Seamless mode lets you "extract" windows (e.g., a Terminal window) from
the CS50 Appliance and position them right alongside your computer's own
windows; in seamless mode, the appliance's windows are no longer
confined to the appliance's own rectangular window.

For seamless mode to work, you'll first need to
link:#_how_to_install_guest_additions[install guest additions] if you
haven't already.

Thereafter, you can enter seamless mode in either of these ways:

* Select *Switch to Seamless Mode* from VirtualBox's *Machine* menu
while the appliance is running. (This menu is outside of the appliance,
not inside of it.)
* Hit VirtualBox's "host key" and L together. (On a Mac, VirtualBox's
host key is your keyboard's left-Command key; on any other OS,
VirtualBox's host key is your keyboard's right-Control key.)

You can exit seamless mode by hitting VirtualBox's "host key" and L
together. (On a Mac, VirtualBox's host key is your keyboard's
left-Command key; on any other OS, VirtualBox's host key is your
keyboard's right-Control key.)

[[]]
How to Use phpMyAdmin
^^^^^^^^^^^^^^^^^^^^^

Visit http://192.168.56.50/phpMyAdmin/ within the appliance or using
your own computer's browser. Log in as prompted.

[[]]
How to Undelete Files
^^^^^^^^^^^^^^^^^^^^^

Every 10 minutes, the appliance take "snapshots" of everything in
`/home` just in case you accidentally delete something. (You can also
mitigate accidental deletions by
link:#_how_to_synchronize_files_with_dropbox[synchronizing with
Dropbox].)

Suppose that you just deleted `~/pset1/hello.c`. Odds are you'll find it
in the `minutely.0` or `minutely.1` snapshot, depending on the current
time, in which case you can recover it with

`cp /snapshots/minutely.0/home/jharvard/pset1/hello.c ~/pset1`

or with

`cp /snapshots/minutely.1/home/jharvard/pset1/hello.c ~/pset1`

in a link:#_how_to_open_a_terminal[terminal]. If you need to recover an
earlier version, you can go further back in time via `minutely.2`,
`minutely.3`, or `minutely.4`. If you'd instead like to go back an hour
or so, you can start with `hourly.0`, followed by `hourly.1`,
`hourly.2`, and so on. Below are all of the intervals you can try.
Realize that the times only estimates, since the intervals' definitions
depend on the current time.

[[]]
Intervals
+++++++++

[cols=",",]
|====================================================
|`minutely.0` |10 minutes ago
|`minutely.1` |20 minutes ago
|`minutely.2` |30 minutes ago
|`minutely.3` |40 minutes ago
|`minutely.4` |50 minutes ago
|`hourly.0` |1 hour ago
|`hourly.1` |2 hours ago
|... |...
|`hourly.22` |23 hours ago
|`daily.0` |yesterday
|`daily.1` |2 days ago
|... |...
|`daily.5` |6 days ago
|`weekly.0` |1 week ago
|`weekly.1` |2 weeks ago
|... |...
|`weekly.51` |51 weeks ago
|====================================================

[[]]
How to Synchronize Files with Dropbox
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

*This feature requires Internet access.*

To make it easier to back up files within the appliance automatically as
well as share them with your own computer(s), you can synchronize a
directory in John Harvard's account with
http://www.dropbox.com/features[Dropbox]. *If officially enrolled in a
course at Harvard, just take care to respect the course's policies on
academic honesty.*

Here's how to configure the appliance for Dropbox.

1.  link:#_how_to_open_a_terminal[Open a terminal].
2.  Execute:
+
----------------
dropbox start -i
----------------
3.  You should be prompted to "download the proprietary daemon" (i.e.,
software); click *OK*. The software should proceed to download and
unpack.
4.  You should then be prompted to set up Dropbox.
* If you don't already have a Dropbox account, leave *I don't have a
Dropbox account* checked, then click *Next*. Create your Dropbox as
prompted.
* If you already have an Dropbox account, check *I already have a
Dropbox account*, then click *OK*. Log in as prompted.
5.  If prompted to upgrade your Dropbox, simply leave *2 GB* checked
(which is free) then click *Next*, unless you want to upgrade to a paid
account.
6.  If prompted to *Choose setup type*, leave *Typical* checked, then
click *Install*.
7.  If prompted to take a 5-step tour, click *Skip Tour*; its
screenshots won't match what you'll see in the appliance.
8.  When informed *That's it!*, uncheck *Open my Dropbox folder now*,
then click *Finish*.
9.  If prompted for your admin password, input *crimson* (unless you
changed your root password to something else). *Don't worry if you then
see an error about "wrong password."*

If you then execute

`dropbox status`

you should see:

`Idle`

If you then execute

`cd ~/Dropbox/` +
`ls`

you should your dropbox's files. If you just created an account, among
them will be *Getting Started.pdf*, *Photos*, and *Public*. You can
browse those same files (and any others you create) at
https://www.dropbox.com/login. You can even undelete files.

*Only those files and folders that you save in `~/Dropbox/` will be
synchronized with your Dropbox account.*

[[]]
How to Transfer Files between Appliance and Your Computer
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

If you'd like to
http://en.wikipedia.org/wiki/SSH_file_transfer_protocol[SFTP] to the
appliance from your own computer (as with
http://cyberduck.ch/[Cyberduck] on Mac OS or with
http://winscp.net/eng/download.php[WinSCP] on Windows), you can SFTP
from your computer to *192.168.56.50*, which is the appliance's static
IP address. (The appliance actually has a second IP address, obtained
via DHCP, but it uses that IP to access the Internet.)

Alternatively, you can "mount" John Harvard's home directory (via a
protocol called http://en.wikipedia.org/wiki/Server_Message_Block[SMB],
otherwise known as http://en.wikipedia.org/wiki/CIFS[CIFS]) in a window
on your own desktop, to and from which you can drag and drop files.
Here's how, whether you run Linux, Mac OS, or Windows.

[[]]
Linux
+++++

[[]]
GNOME

1.  Select *Connect to Server...* from the *Places* menu.
2.  Input *192.168.56.50* for *Server*.
3.  Select *Windows share* for *Type*.
4.  Input *jharvard* for *Share*.
5.  Input */* for *Folder*.
6.  Input *CS50* for *Domain name*.
7.  Input *jharvard* for *User name*.
8.  Input *crimson* for *Password*.
9.  Check *Remember this password* if you'd like.
10. Click *Connect*.

John Harvard's home directory should then open in a new window.

[[]]
KDE

1.  Open Dolphin (as via *Computer > Network*).
2.  Select *Network*.
3.  Click *Add Network Folder*.
4.  Select *Microsoft® Windows® network drive*, then click *Next*.
5.  Input *appliance* for *Name*.
6.  Input *192.168.56.50* for *Server*.
7.  Input *jharvard* for *Folder*.
8.  Check *Create an icon for this remote folder* if you'd like.
9.  Click *Finish*.
10. Input *jharvard* for *Username*.
11. Input *crimson* for *Password*.
12. Check *Remember password* if you'd like.
13. Click *OK*.

John Harvard's home directory should then open in a new window.

[[]]
Xfce

1.  Install `gvfs-smb` as `root` (as via `sudo`) if not installed
already, as with
+
-----------------------
yum -y install gvfs-smb
-----------------------
+
if running CentOS, Fedora, or RedHat or with
+
-----------------------------
apt-get install gvfs-backends
-----------------------------
+
if running Debian or Ubuntu.
2.  Launch Thunar (as via *Applications Menu > System > Thunar File
Manager*).
3.  Select *Open Location...* from the *Go* menu.
4.  Input *smb://192.168.56.50/jharvard/* for *Location* then click
*Open*.
5.  Input *jharvard* for *Username*.
6.  Input *CS50* for *Domain*.
7.  Input *crimson* for *Password*.
8.  Check *Remember forever* if you'd like.
9.  Click *Connect*.

[[]]
Mac OS
++++++

1.  Select *Connect to Server...* from the Finder's *Go* menu.
2.  Under *Server Address:*, input *smb://192.168.56.50*. (Click the *+*
icon if you'd like to add the appliance to your *Favorite Servers*.)
Then click *Connect*.
3.  If prompted for your name and password:
1.  Select *Registered User*.
2.  Input *jharvard* for *Name*.
3.  Input *crimson* for *Password*.
4.  Click *Connect*.

John Harvard's home directory should then open in a new window.

[[]]
Windows
+++++++

1.  Open any folder on your hard drive.
2.  Click the address bar atop the folder's window and input
*\\192.168.56.50\jharvard*, then click *Enter*.
3.  If prompted for your name and password:
1.  Input *jharvard* for *User name*.
2.  Input *crimson* for *Password*.
3.  Check *Remember my credentials* if you'd like.
4.  Click *Connect*.

John Harvard's home directory should then open in a new window.

[[]]
How to Access Appliance from Another Computer
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

By default, you can access the appliance from your own computer via the
appliance's static IP address, which is *192.168.56.50*, because
VirtualBox assigns your own computer a static IP address of
*192.168.56.1*, which is on the same "subnet." Those IP addresses only
exist within VirtualBox, though, so, by default, it's _not_ possible to
access the appliance from other computers on your LAN (i.e., home
network).

However, the appliance also comes with a "bridged" network interface
(`eth2`) that you can activate manually. So long as your LAN supports
http://en.wikipedia.org/wiki/Dynamic_Host_Configuration_Protocol[DHCP]
(which most home networks do), that interface will acquire an IP address
on your LAN, at which point you can access the appliance via HTTP or SSH
via _that_ IP from any computer on your LAN.

However, for security's sake, you will not be able (from any computer
besides your own, on which the appliance is running) to:

* access phpMyAdmin, at http://192.168.56.50/phpMyAdmin/
* access Usermin, at http://192.168.56.50:20000/
* access Webmin, at http://192.168.56.50:10000/
* link:#_how_to_transfer_files_between_appliance_and_your_computer[mount
John Harvard's home directory] in a window on your desktop

You will be able to:

* access John Harvard's homepage at http://192.168.56.50/~jharvard/
* SSH to the appliance at 192.168.56.50

*However, odds are `eth2` will not work on Harvard's campus because of
Harvard's firewall.*

To enable `eth2` temporarily, link:#_how_to_open_a_terminal[open a
terminal] and execute:

`sudo ifup eth2`

If your LAN indeed supports DHCP, you should see:

`Determining IP information for eth2... done.`

To find out which IP address was assigned by your LAN to the appliance,
execute

`ifconfig eth2`

and look to the right of *inet addr* (not *inet6 addr*). That's the
address via which you can accessible the appliance from another computer
on your LAN. Odds are it will start with *192.168.0* or *192.168.1* or
*10.0.1*, though other prefixes are possible.

If you would like to enable `eth2` permanently:

1.  Select *Menu > Administration > Network*.
2.  Highlight *eth2* in the window that appears, then click *Edit*.
3.  Check *Activate device when computer starts*, then click *OK*.
4.  Select *File > Save*, then click *OK*.
5.  Select *File > Quit*.
6.  link:#_how_to_restart_appliance[Restart the appliance].

Just realize that each time the appliance starts, it may be assigned a
different IP address on your LAN via DCHP, so you might need to re-run

`ifconfig eth2`

each time to find out the current address. If your home router supports
"DHCP reservations," know that you can find out the MAC (i.e., Ethernet)
address of `eth2` by running

`ifconfig eth2`

as well. Look to the right of *HWaddr* for the address. Alternatively,
if you think it's safe to assign the appliance a static IP address on
your LAN without your home router even knowing, select *Menu >
Administration > Network*, highlight *eth2* in the window that appears,
click *Edit*, select *Statically set IP addresses*, and configure the
interface as you see fit.

[[]]
How to Take a Screenshot
^^^^^^^^^^^^^^^^^^^^^^^^

It's sometimes helpful to take a screenshot of the appliance so that you
can remember or share something you see on your screen. *If officially
enrolled in a course at Harvard, just take care to respect the course's
policies on academic honesty.*

To take a screenshot inside of the appliance:

1.  Select *Menu > Accessories > Screenshot*.
2.  Check a *Region to capture*.
3.  Leave *Capture the mouse pointer* checked unless you'd like to hide
it.
4.  Leave *Delay before capturing* at *1*, unless you need more time.
5.  Click *OK*.
6.  You should then be prompted to decide on an *Action*. Leave *Save*
checked and then click *OK* if you'd like to save the screenshot as a
file; decide on a destination as prompted. You can then share that
screenshot with someone if necessary, as by opening Gmail in Firefox and
sending it as an attachment.

You can also link:#_how_to_share_control_of_your_screen[share control of
your screen] if you need someone else to see more than a screenshot.

[[]]
How to Share Control of Your Screen
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

*This feature requires Internet access.*

So that you can help (and be helped by!) fellow learners on the
Internet, the appliance comes with
http://www.teamviewer.com/[TeamViewer], which lets you share (control
of) your screen with someone else (a "partner") on the Internet (and
vice versa). *If officially enrolled in a course at Harvard, just take
care to respect the course's policies on academic honesty.*

To share your screen with some else:

1.  Select *Menu > Share Screen*. A window should appear.
2.  Tell your partner the *ID* and *Password* that you see. Once your
partner inputs those values, your screen should be shared.

To see someone else's screen:

1.  Ask your partner for an *ID* and *Password*.
2.  Select *Menu > Share Screen*. A window should appear.
3.  Input the *ID* into that window, then click *Connect to partner*.
4.  When prompted, input the *Password*, at which point you should see
your partner's screen.

If you would like to connect to someone else's appliance from your own
computer (rather than from your own appliance) or from a mobile device,
you can download TeamViewer for free for Android, iOS, Linux, Mac OS, or
Windows from http://www.teamviewer.com/en/download.aspx.

[[]]
How to Disable Automatic Login
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

By default, the appliance logs you in as John Harvard. To disable
automatic login, link:#_how_to_open_a_terminal[open a terminal] and
execute:

`sudo rm -f /etc/gdm/custom.conf`

Then link:#_how_to_restart_appliance[restart the appliance]. You should
now see a login prompt instead of John Harvard's desktop.

[[]]
How to Log Out of Appliance
^^^^^^^^^^^^^^^^^^^^^^^^^^^

To log out of the appliance, click
image:Exit.png[Exit.png,title="image"] in the appliance's bottom-right
corner, then click *Log Out*.

[[]]
How to Restart Appliance
^^^^^^^^^^^^^^^^^^^^^^^^

You can restart the appliance in either of these ways:

* Click image:Exit.png[Exit.png,title="image"] in the appliance's
bottom-right corner, then click *Restart*.
* link:#_how_to_open_a_terminal[Open a terminal] and execute the below,
inputting your password if prompted:
+
------------
sudo restart
------------

[[]]
How to Shut Down Appliance
^^^^^^^^^^^^^^^^^^^^^^^^^^

You can shut down the appliance in either of these ways:

* Click image:Exit.png[Exit.png,title="image"] in the appliance's
bottom-right corner, then click *Shut Down*.
* link:#_how_to_open_a_terminal[Open a terminal] and execute the below,
inputting your password if prompted:
+
-------------
sudo shutdown
-------------

[[]]
How to Configure Appliance for a Proxy Server
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

If your own computer sits behind an HTTP proxy server, you might need to
configure the appliance to route HTTP traffic through that proxy as
well. Here's how.

1.  link:#_how_to_open_a_terminal[Open a terminal] and execute the below,
inputting your password if prompted:
+
---------------------------------
sudo nano /etc/profile.d/proxy.sh
---------------------------------
2.  Add the following line to that (otherwise empty) file, where
`example.com` is the address of your proxy server and `80` is its port
number:
+
----------------------------------------
export http_proxy=http://example.com:80/
----------------------------------------
3.  Save and quit Nano by hitting *ctrl-X*, then *y*, then *Enter*.
4.  Execute:
+
--------------------------------------
sudo chmod 644 /etc/profile.d/proxy.sh
--------------------------------------
5.  link:#_how_to_restart_appliance[Restart the appliance].

[[]]
How to Run Programs from Lectures
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

See link:Fall_2010#Lectures[Fall 2010's HOWTO].

[[]]
How to Do Problem Sets
~~~~~~~~~~~~~~~~~~~~~~

See link:Fall_2010#Problem_Sets[Fall 2010's HOWTO].

[[]]
Implementation Details
----------------------

Below are details on how we implemented the CS50 Appliance in case
you're curious or would like to reproduce these steps yourself. *You do
NOT need to follow these directions to if you simply want to use the
CS50 Appliance:* you only need to follow link:#_instructions[the
instructions above].

We built the appliance using a combination of
http://fedoraproject.org/wiki/Anaconda/Kickstart[Kickstart] and
http://fedoraproject.org/wiki/How_to_create_an_RPM_package[rpmbuild]. It
took us a while to figure everything out, but now that we (and you) know
what we're doing, it only takes about 20 minutes to build the appliance
(and most of that time is spent waiting for Kickstart to run).

The CS50 Appliance's kickstart file can be found at
http://mirror.cs50.net/appliance/2.1/cs50-appliance-2.1-5.ks. And the
CS50 Appliance's spec file can be found at
http://mirror.cs50.net/appliance/2.1/cs50-appliance-2.1-5.spec.

The directions below assume familiarity with
http://en.wikipedia.org/wiki/Fedora_(operating_system)[Fedora] and
installation thereof as well as with
http://en.wikipedia.org/wiki/VirtualBox[VirtualBox]. If you have
questions, you may want to join CS50's Google Group at
http://cs50.tv/2010/fall/#l=psets&r=group[cs50.tv].

1.  Download and install (on any OS) the latest version of VirtualBox
from http://www.virtualbox.org/wiki/Downloads.
2.  Download an ISO of the 32-bit Fedora 15 DVD from
http://download.fedoraproject.org/pub/fedora/linux/releases/15/Fedora/i386/iso/Fedora-15-i386-DVD.iso
(which is linked at
http://fedoraproject.org/en/get-fedora-options#formats).
3.  Launch VirtualBox and click *New*.
4.  On the screen entitled *Welcome to the New Virtual Machine Wizard!*,
click *Continue*.
5.  On the screen entitled *VM Name and OS Type*, input a value below
*Name* (e.g., *CS50 Appliance*), select *Linux* next to *Operating
System*, select *Fedora* (not *Fedora (64 bit)*) next to *Version*, then
click *Continue*.
6.  On the screen entitled *Memory*, input *768* MB, if not already
present, then click *Continue*.
7.  On the screen entitled *Virtual Hard Disk*, check *Start-up Disk*
(if not checked already), select *Create new hard disk* (if not selected
already), then click *Continue*.
8.  On the screen entitled *Welcome to the Create New Virtual Disk
Wizard!*, select *VDI (VirtualBox Disk Image)* (if not selected
already), then click *Continue*.
9.  On the screen entitled *Virtual disk storage details*, select
*Dynamically allocated* (if not selected already), then click
*Continue*.
10. On the screen entitled *Virtual disk file location and size*, leave
the value under *Location* unchanged (assuming it's identical to the
name you inputted earlier), input *32.0 GB* under *Size*, then click
*Continue*.
11. On the screen entitled *Summary*, click *Create*.
12. On the screen also entitled *Summary*, click *Create*.
13. In VirtualBox's lefthand list of VMs, single-click the VM you just
created to highlight it, then click *Settings*.
14. Click *Network*.
15. Under *Adapter 1*, ensure that *Enable Network Adapter* is checked,
that *NAT* is selected next to *Attached to*, and that (under
*Advanced*), *PCnet-PCI II (Am79C970A)* is selected next to *Adapter
Type*.
16. Click *Adapter 2*. Check *Enable Network Adapter* and select
*Host-only Adapter* next to *Attached to*. Ensure that (under
*Advanced*) *PCnet-PCI II (Am79C970A)* is selected next to *Adapter
Type*.
17. Click *Adapter 3*. Check *Enable Network Adapter* and select
*Bridged Adapter* next to *Attached to*. Ensure that (under *Advanced*)
*PCnet-PCI II (Am79C970A)* is selected next to *Adapter Type*.
18. Click *OK*.
19. In VirtualBox's lefthand list of VMs, single-click the VM to
highlight it, if not highlighted already, then click *Start*.
20. On the screen entitled *Welcome to the First Run Wizard!*, click
*Continue*.
21. On the screen entitled *Select Installation Media*, click the folder
icon under *Media Source*, navigate your way to the ISO you downloaded
earlier (i.e., *Fedora-15-i386-DVD.iso*), click it once to highlight it,
then click *OK*. You should then see *Fedora-15-i386-DVD.iso* under
*Media Source*. Click *Continue*.
22. On the screen entitled *Summary*, click *Done*.
23. Immediately click inside of the VM's window (so that your cursor
disappears). As soon as you see the screen entitled *Welcome to Fedora
15!*, hit *Esc*. You should then see a *boot:* prompt.
24. At the *boot:* prompt, type
+
----------------------------------------------------------------------------------------------------------------------------
linux biosdevname=0 ks=<nowiki>http://mirror.cs50.net/appliance/2.1/cs50-appliance-2.1-5.ks</nowiki> ksdevice=eth0 selinux=0
----------------------------------------------------------------------------------------------------------------------------
+
then hit *Enter*. Kickstart will proceed to install Fedora 15 and CS50's
own RPMs. Some number of minutes later (depending on the speed of your
computer and Internet connection), the VM will power itself off.
25. In VirtualBox's lefthand list of VMs, click the VM to highlight it,
if not highlighted already, then click *Settings*.
26. Click *Storage*.
27. Under *IDE Controller*, single-click *Fedora-15-i386-DVD.iso* to
highlight it. Then click the CD icon to the right of *CD/DVD Drive* and
select *Remove disk from virtual drive*. Then click *OK*.
28. In VirtualBox's lefthand list of VMs, single-click the VM to
highlight it, if not highlighted already, then select *Export
Appliance...* from VirtualBox's *Devices* menu.
29. On the screen entitled *Welcome to the Appliance Export Wizard!*,
single-click the VM once to highlight it, if not highlighted already,
then click *Continue*.
30. On the screen entitled *Appliance Export Settings*, click
*Choose...* and navigate your way to a folder in which you'd like to
save the exported appliance. Select *Open Virtualization Format (*.ovf)*
next to *Files of type*, then input a filename (that ends in *.ovf*) for
the appliance next to *Save As* (e.g., *cs50-appliance-2.1-5.ovf*). Then
click *Save*.
31. Back on the screen entitled *Appliance Export Settings*, leave
*Write legacy OVF 0.9* and *Write Manifest file* unchecked, then click
*Continue*.
32. On the next screen also entitled *Appliance Export Settings*, input
values for *Name*, *Product*, *Product-URL*, *Vendor*, *Vendor-URL*,
*Version*, *Description*, and *License*. Then click *Done*. An
inaccurate number of seconds later, you should find two files in the
folder you created: *cs50-appliance-2.1-5.ovf* (which contain's the VM's
configuration) and *cs50-appliance-2.1-5.disk1.vmdk* (which is the VM's
hard disk).
33. Open *cs50-appliance-2.1-5.ovf* with a text editor and delete:
* the *vbox:uuid* attribute in the *Disk* element's tag;
* the entire *Item* element for *ideController1* (i.e., everything
between that IDE Controller's ** and ** tags);
* the entire *vbox:Machine* element (i.e., everything between ** and
**).
34. Add elements like the below as children of (i.e., inside)
*VirtualSystem*:

----------------------------------------------------------------------
<ProductSection>
  <Info>Meta-information about the installed software</Info>
  <Product>CS50 Appliance 2.1</Product>
  <Vendor>CS50</Vendor>
  <Version>2.1</Version>
  <ProductUrl>https://manual.cs50.net/Appliance</ProductUrl>
  <VendorUrl>http://cs50.tv/</VendorUrl>
</ProductSection>
<EulaSection>
  <Info>License agreement for the virtual system</Info>
  <License>http://creativecommons.org/licenses/by-nc-sa/3.0/</License>
</EulaSection>
----------------------------------------------------------------------

1.  Create a folder called *cs50-appliance-2.1-5-ovf* and then move
*cs50-appliance-2.1-5.ovf* and *cs50-appliance-2.1-5-disk1.vmdk* into
that folder.
2.  Create a ZIP of that folder called *cs50-appliance-2.1-5-ovf.zip*,
as with:
+
-----------------------------------------------------------------------
zip -r -n .vmdk  cs50-appliance-2.1-5-ovf.zip cs50-appliance-2.1-5-ovf/
-----------------------------------------------------------------------
+
This use of `-n` tells `zip` not to compress
`cs50-appliance-2.1-5-disk1.vmdk` (since it's already compressed).
3.  Distribute `cs50-appliance-2.1-5-ovf.zip`!

[[]]
VMware
^^^^^^

VirtualBox exports VMDK files in a "streamOptimized" (i.e., compressed)
format that VMware's products do not support. However, it's possible to
convert `cs50-appliance-2.1-5-disk1.vmdk` to a "monolithicSparse" format
that VMware's products do understand, as with:

`mkdir cs50-appliance-2.1-5-vmx ` +
`vmware-vdiskmanager -r /path/to/cs50-appliance-2.1-5-ovf/cs50-appliance-2.1-5-disk1.vmdk -t 0 cs50-appliance-2.1-5-vmx/cs50-appliance-2.1-5-disk1.vmdk`

`vmware-vdiskmanager` comes with VMware Fusion (in
`/Library/Application Support/VMware Fusion/`) and VMware Workstation
(in `C:\Program Files\VMware\VMware Workstation` or
`C:\Program Files (x86)\VMware\VMware Workstation\`).

You'll then want to create a text file called `cs50-appliance-2.1-5.vmx`
in `cs50-appliance-2.1-5-vmx/` with these contents:

---------------------------------------------------------------------------
#!/usr/bin/vmware
config.version = "8"
displayName = "CS50 Appliance 2.1"
ethernet0.connectionType = "nat"
ethernet0.present = "TRUE"
ethernet1.connectionType = "hostonly"
ethernet1.present = "TRUE"
ethernet2.connectionType = "bridged"
ethernet2.present = "TRUE"
floppy0.present = "FALSE"
guestinfo.vmware.product.class = "virtual machine"
guestinfo.vmware.product.long = "CS50 Appliance 2.1"
guestinfo.vmware.product.url = "https://manual.cs50.net/CS50_Appliance_2.1"
guestOS = "fedora"
ide1:0.autodetect = "TRUE"
ide1:0.deviceType = "cdrom-raw"
ide1:0.fileName = "auto detect"
ide1:0.present = "TRUE"
ide1:0.startConnected = "TRUE"
memsize = "768"
powerType.powerOff = "soft"
powerType.powerOn = "soft"
powerType.reset = "soft"
powerType.suspend = "soft"
priority.grabbed = "normal"
priority.ungrabbed = "normal"
scsi0:0.deviceType = "disk"
scsi0:0.fileName = "cs50-appliance-2.1-5-disk1.vmdk"
scsi0:0.mode = "persistent"
scsi0:0.present = "TRUE"
scsi0:0.startConnected = "TRUE"
scsi0:0.writeThrough = "TRUE"
scsi0.present = "TRUE"
scsi0.virtualDev = "lsilogic"
sound.present = "TRUE"
sound.virtualdev = "sb16"
tools.syncTime = "TRUE"
tools.upgrade.policy = "upgradeAtPowerCycle"
usb.generic.autoconnect = "TRUE"
usb.present = "TRUE"
virtualHW.version = "7"
---------------------------------------------------------------------------

You can then create a ZIP of that folder called
*cs50-appliance-2.1-5-vmx.zip*, as with:

`zip -r cs50-appliance-2.1-5-vmx.zip cs50-appliance-2.1-5-vmx/`

Note the absence of `-n` this time, as the VMware-compatible VMDK is not
itself compressed and thus should be by `zip`.

You can then distribute `cs50-appliance-2.1-5-vmx.zip` as well!

[[]]
Troubleshooting
---------------

If you are having problems that aren't addressed here or under
link:#_known_issues[Known Issues], turn to the course's
http://cs50.tv/2010/fall/#r=group[Google Group] for help.

[[]]
Forgotten Password
~~~~~~~~~~~~~~~~~~

Follow these directions if you have forgotten the password with which
jharvard or root can log into the appliance (as via the console or, in
John Harvard's case, via SSH). If you have forgotten a MySQL password,
see link:#_forgotten_mysql_password[further below].

[[]]
jharvard
^^^^^^^^

John Harvard's password is *crimson* by default. But if you changed it
to something you do not remember, you can change it to something you
know as follows:

1.  link:#_how_to_log_out_of_appliance[Log out] of the appliance if
already logged in.
2.  Log in as *root* with password *crimson* (unless you changed the
superuser's password too).
3.  link:#_how_to_open_a_terminal[Open a terminal], execute
+
---------------
passwd jharvard
---------------
+
and input a new password for John Harvard (e.g., *crimson*) twice as
prompted.
4.  link:#_how_to_log_out_of_appliance[Log out] of the appliance.

You should then be able to log in as John Harvard again.

[[]]
root
^^^^

The superuser's password is *crimson* by default. But if you changed it
to something you do not remember, you can change it to something you
know as follows:

1.  link:#_how_to_shut_down_appliance[Shut down the appliance] if it's
already running.
2.  link:#_how_to_start_appliance[Start the appliance], immediately click
once inside of its window (so that your cursor disappears), and
immediately hold *Shift*. Within a few seconds, you should see a *GNU
GRUB* screen with *Generic* highlighted in white. If not, start over and
try again.
3.  Hit *e*, and you should see a screen with at least three options:
*root*, *kernel*, and *initrd*. Highlight *kernel* and hit *e* again.
You should then see a line of text that ends with `quiet`. Hit the space
bar and add the word `single` to the end of that line. Then hit *Enter*.
You should find yourself back at the previous screen, with *kernel*
highlighted in white.
4.  Hit *b* to boot into the appliance in "single-user mode.''' You
should soon see a terminal prompt.
5.  Execute
+
------
passwd
------
+
and input a new password twice (e.g., *crimson*) as prompted.
6.  Execute
+
------
reboot
------
+
to restart the appliance.

[[]]
Forgotten MySQL Password
~~~~~~~~~~~~~~~~~~~~~~~~

John Harvard's password for MySQL is *crimson* by default, as is the
superuser's. But if you changed either to something you do not remember,
you can change both back to *crimson* by
link:#_how_to_open_a_terminal[opening a terminal] and executing the
below:

`sudo yum -y reinstall cs50-appliance`

That command will restore the appliance to "factory defaults." It will
not delete any code that you've written.

[[]]
Known Issues
------------

* 2.1-2
** Appliance reports VERR upon startup on some Macs, the result of a
missing vboxnet0 host-only interface.
** Some code from Fall 2010 does not compile properly because of CS50
Library's use of -lgc.
* 2.1-3
** None.
* 2.1-4
** `/snapshots/` is not mounted at boot because NFS server has not yet
started.
* 2.1-5
** None.

[[]]
Changelog
---------

* link:CS50 Appliance 1.4#Changelog[1.4]
* link:CS50 Appliance 2.0#Changelog[2.0]
* 2.1-1
** Enabled Samba for file sharing.
* 2.1-3
** Updated link:CS50 Library[CS50 Library] to 3.0 (eliminating garbage
collection).
** Removed `-lgc` from `$LDLIBS`.
** Updated Firefox (and plugins) to 6.0; eliminated appliance's
dependency on 5.0.
** Customized users' default Firefox settings via `/etc/skel/.mozilla`.
*** Firefox opens with blank page.
*** Plugins' pages are no longer displayed.
*** Web Developer toolbar's Tools menu is now hidden (since Firefox 6.0
has its own Web Developer menu).
** Imported Adobe's and Fedora's GPG keys.
** Added `ncurses` and `ncurses-devel`.
** Added Scratch (with fix for audio).
** Changed default resolution for users to 800x600 (via
`/etc/skel/.config/xfce4/xfconf/xfce-perchannel-xml/displays.xml`)
* 2.1-4
** Added Screenshot accessory.
** Added support for https://www.dropbox.com/[Dropbox]. Imported its GPG
key.
** Added support for http://www.reviewboard.org/[Review Board].
** Added support for Java to Eclipse.
** Exported snapshots to `localhost` as read-only via NFS.
* 2.1-5
** Increased frequency of snapshots.
** Fixed premature mounting of `/snapshots/`.
** Added `mlocate`
** Added `indent`.

[[]]
References
----------

* http://www.virtualbox.org/manual/UserManual.html[User Manual] for
VirtualBox

[[]]
Acknowledgements
----------------

Many thanks to everyone who's helped us improve the CS50 Appliance,
including, but not limited to:

* Amir
* Darrin Ragsdale
* Dotty
* Federico Lerner
* James Lankford
* Kartikeya Srivastava
* Matthew Polega
* Matthew Roknich
* Mauro Braunstein
* Nobu Kikuchi
* Philip Durbin
* Rod Ruggiero
* Rolando Cruz
* Rory O'Reilly
* Sergio Prado
* Shaun Gibson

Category:HOWTO
